--- a/css_pages/index.css
+++ b/css_pages/index.css
@@ -284,18 +284,22 @@
 .cards {
   height: 400px;
   width: 1200px;
-  border: 1.5px solid black;
+  border: 1px solid black;
   margin: 50px auto;
-  box-shadow: -8px 8px chocolate;
+  box-shadow: -5px 5px chocolate;
   display: flex;
   justify-content: center;
   align-items: center;
   justify-content: space-around;
+  border-radius: 5px;
+}
+.cards:nth-child(even){
+  flex-direction: row-reverse;
 }
 .cardcnt {
   height: 350px;
   width: 700px;
-  border: 1px solid black;
+  
 }
 .cardcnt h2 {
   font-size: 30px;
@@ -317,29 +321,24 @@
   margin-top: 20px;
   box-shadow: -3px 3px chocolate;
   border: 1.5px solid blue;
+  border-radius: 5px;
 }
 .cardimg {
   height: 350px;
-  width: 400px;
-  border: 1px solid black;
+  width: 400px; 
 }
 .cardimg img {
   height: 100%;
   width: 100%;
   object-fit: cover;
+  border-radius: 5px;
 }
 .cards:hover {
   cursor: pointer;
-  animation: shake 0.4s;
+  box-shadow: 0px 0px 5px;
+   transform: scale(1.03);
 }
-@keyframes shake {
-  0% {
-    transform: translateX(0px);
-  }
-  50% {
-    transform: translateX(-20px);
-  }
-}
+
 .cardcnt button:hover {
   background-color: blue;
   color: white;
