--- a/css_pages/about.css
+++ b/css_pages/about.css
@@ -7,9 +7,13 @@
 .header {
   height: 80px;
   width: 100%;
-  border: 1px solid black;
   display: flex;
   align-items: center;
+  position: sticky;
+  top: 0px;
+  z-index: 1000;
+  background-color: white;
+  box-shadow: 0px 0px 4px;
 }
 .tamilletter {
   margin-left: 50px;
@@ -38,7 +42,7 @@
   justify-content: center;
   align-items: center;
   justify-content: space-evenly;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 .herocont {
   height: 450px;
@@ -49,7 +53,7 @@
   width: 25%;
   display: flex;
   justify-content: space-between;
-  pointer-events: none; 
+  pointer-events: none;
 }
 .imgbox {
   height: 100%;
@@ -112,7 +116,7 @@
 .footer {
   height: 350px;
   width: 100%;
-  border: 1px solid black;
+  border: 0.5px solid black;
   background-color: rgb(239, 239, 255);
 }
 .footerbox {
@@ -177,7 +181,8 @@
 .journeybox {
   height: 2000px;
   width: 100%;
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  border-top: 1px solid black;
 }
 
 .boximg {
