--- a/css_pages/index.css
+++ b/css_pages/index.css
@@ -8,13 +8,14 @@
 .header {
   height: 80px;
   width: 100%;
-  border: 1.4px solid black;
+  /* border: 1.4px solid black; */
   display: flex;
   align-items: center;
   position: sticky;
   top: 0px;
   z-index: 1000;
   background-color: white;
+  box-shadow: 0px 0px 3px;
 }
 .tamilletter {
   margin-left: 50px;
@@ -161,17 +162,17 @@
 }
 
 .skillset {
-  height: 200px;
+  height: 250px;
   width: 100%;
   border: 1px solid black;
   margin-top: 10px;
 }
-.skillset div {
+.skillset > div {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
 }
-.skillset h2 {
+.skillset h2{
   text-align: center;
   font-size: 30px;
   font-weight: bold;
@@ -179,9 +180,16 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .icon {
-  height: 80px;
-  width: 80px;
+  height: 100px;
+  width: 100px;
+  margin-top: 20px;
   animation: moveLeft 3s linear infinite;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.icon:hover{
+   animation-play-state: paused;
 }
 @keyframes moveLeft {
   0% {
@@ -195,7 +203,24 @@
   height: 100%;
   width: 100%;
 }
-
+.score{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.score-outer{
+  box-sizing: border-box;
+  border-radius: 30px;
+  width: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.511);
+}
+.score-inner{
+  padding: 3px;
+  border-radius: 30px;
+  width: 80%;
+  box-sizing: border-box;
+  background-color: blue;
+}
 .footer {
   height: 350px;
   width: 100%;
@@ -345,3 +370,8 @@
   cursor: pointer;
   transition: 0.5s;
 }
+
+.achievments{
+  
+}
+
