--- a/css_pages/about.css
+++ b/css_pages/about.css
@@ -34,6 +34,7 @@
   list-style: none;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 .herosec {
   height: 550px;
