--- a/css_pages/index.css
+++ b/css_pages/index.css
@@ -1,10 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap");
+
 * {
   margin: 0px;
   padding: 0px;
   scrollbar-width: none;
   scroll-behavior: smooth;
 }
+
 .header {
   height: 80px;
   width: 100%;
@@ -17,27 +19,37 @@
   background-color: white;
   box-shadow: 0px 0px 3px;
 }
+
 .tamilletter {
   margin-left: 50px;
   background: linear-gradient(to right, #d2691e, #0000ff);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.tamilletter a {
+  text-decoration: none;
+}
+
 .navlist {
   display: flex;
   gap: 30px;
   margin-left: 65%;
 }
+
 .navlist a {
   text-decoration: none;
   color: black;
 }
+
 .navlist li {
   list-style: none;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
 }
+
 .herosec {
   height: 550px;
   width: 100%;
@@ -46,13 +58,16 @@
   align-items: center;
   justify-content: space-evenly;
 }
+
 .herocont {
   height: 450px;
   width: 50%;
 }
+
 .herocont p {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+
 .heroimg {
   margin-top: 60px;
   height: 430px;
@@ -72,11 +87,13 @@
   background-color: rgb(186, 186, 186);
   margin: 50px 20px 0 20px;
 }
+
 .myimg img {
   height: 100%;
   width: 100%;
   object-fit: cover;
 }
+
 .childimg {
   height: 120px;
   width: 120px;
@@ -88,11 +105,13 @@
   clip-path: polygon(0px 0px, 120px 0px, 120px 100px, 100px 120px, 0px 120px);
   font-family: "Patrick Hand", cursive;
 }
+
 .childimg p {
   text-align: center;
   font-size: 15px;
   margin-top: 10px;
 }
+
 .childimg span {
   font-weight: bold;
 }
@@ -108,17 +127,21 @@
   margin-left: 20px;
   margin-top: 100px;
 }
+
 .name {
   color: chocolate;
 }
+
 .herocont p {
   margin-top: 10px;
   margin-left: 20px;
   font-size: 22px;
 }
+
 .highlight {
   font-weight: bold;
 }
+
 .status {
   font-size: 20px;
 }
@@ -129,18 +152,22 @@
   display: flex;
   gap: 55px;
 }
+
 .btns button:hover {
   cursor: pointer;
   animation: move 1s;
 }
+
 @keyframes move {
   0% {
     transform: translateX(0px);
   }
+
   25% {
     transform: translateX(10px);
   }
 }
+
 .btn1 {
   padding: 12px 40px;
   font-size: 17px;
@@ -151,6 +178,7 @@
   background-color: blue;
   box-shadow: 5px 5px chocolate;
 }
+
 .btn2 {
   padding: 12px 40px;
   font-size: 17px;
@@ -167,13 +195,33 @@
   border: 1px solid black;
   margin-top: 10px;
   overflow: hidden;
+  /* Hide the scrollbar */
 }
-.skillset > div {
+
+.icon-track {
   display: flex;
-  gap: 200px;
-  width: 100%;
-  animation: scrollLeft 3s linear infinite;
+  gap: 190px;
+  /* Space between icons */
+  width: max-content;
+  padding: 20px 0;
+  margin-top: 20px;
+  animation: scrollIcons 20s linear infinite;
 }
+
+.skillset:hover .icon-track {
+  animation-play-state: paused;
+}
+
+@keyframes scrollIcons {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
 .skillset h2 {
   text-align: center;
   font-size: 30px;
@@ -181,32 +229,25 @@
   margin-top: 10px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+
 .icon {
-  height: 100px;
-  width: 100px;
-  margin-top: 20px;
-  animation: moveLeft 3s linear infinite;
+  height: 95px;
+  width: 95px;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
-}
-@keyframes moveLeft {
-  0% {
-    transform: translateX(0%);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
+  transition: transform 0.3s;
 }
 
-.skillset:hover .icon {
-  animation-play-state: paused;
+.icon:hover {
+  transform: scale(1.1);
 }
 
 .icon img {
   height: 100%;
   width: 100%;
 }
+
 .score {
   display: flex;
   gap: 10px;
@@ -214,17 +255,20 @@
   margin-top: 10px;
   width: 150%;
 }
+
 .score p {
   font-weight: bold;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
 .score-outer {
   box-sizing: border-box;
   border-radius: 30px;
   width: 100%;
   border: 1.5px solid rgba(0, 0, 0, 0.511);
 }
+
 .score-inner {
   padding: 3px;
   border-radius: 30px;
@@ -232,54 +276,65 @@
   box-sizing: border-box;
   background-color: blue;
 }
+
 .footer {
   height: 350px;
   width: 100%;
-  border: 1.5px solid black;
+  border: 1px solid black;
   background-color: rgb(239, 239, 255);
   margin-top: 50px;
 }
+
 .footerbox {
   display: flex;
 }
+
 .signaturebox {
   height: 200px;
   width: 300px;
   margin-top: 90px;
   margin-left: 140px;
 }
+
 .signaturebox img {
   height: 100%;
   width: 100%;
   background-color: rgb(239, 239, 255);
 }
+
 .fcontent {
   margin-top: 70px;
   margin-left: 50px;
 }
+
 .fcontent h1 {
   font-size: 50px;
   font-weight: 700;
 }
+
 .fcontent p {
   font-size: 22px;
   margin-top: 10px;
   font-weight: 400;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+
 .contact {
   display: flex;
   gap: 60px;
   margin-top: -64px;
   margin-left: 50px;
 }
+
 .contact div h3 {
   font-size: 22px;
   font-weight: 350;
 }
+
 .contact div a {
   text-decoration: none;
 }
+
 .media {
   height: 40px;
   width: 300px;
@@ -287,36 +342,44 @@
   display: flex;
   justify-content: space-between;
 }
+
 .media div {
   height: 40px;
   width: 40px;
   box-shadow: -3px 4px chocolate;
   border-radius: 10px;
 }
+
 .media div:hover {
   cursor: pointer;
 }
+
 .media div img {
   height: 100%;
   width: 100%;
 }
+
 .sec1 {
   height: 100px;
   width: 100%;
   text-align: center;
 }
+
 .sec1 h2 {
   margin-top: 100px;
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .sec1 p {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 21px;
 }
+
 .sec1 span {
   font-weight: 500;
 }
+
 .cards {
   height: 400px;
   width: 1200px;
@@ -329,25 +392,30 @@
   box-shadow: 0px 0px 5px;
   transition: transform 0.3s ease;
 }
+
 .cards:nth-child(even) {
   flex-direction: row-reverse;
 }
+
 .cardcnt {
   height: 350px;
   width: 700px;
 }
+
 .cardcnt h2 {
   font-size: 30px;
   margin-left: 20px;
   margin-top: 40px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+
 .cardcnt p {
   margin-top: 10px;
   margin-left: 20px;
   font-size: 20px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+
 .cardcnt button {
   padding: 10px 40px;
   font-size: 18px;
@@ -358,16 +426,19 @@
   border: 1.5px solid blue;
   border-radius: 5px;
 }
+
 .cardimg {
   height: 350px;
   width: 400px;
 }
+
 .cardimg img {
   height: 100%;
   width: 100%;
   object-fit: cover;
   border-radius: 5px;
 }
+
 .cards:hover {
   transform: scale(1.03);
   cursor: pointer;
@@ -387,15 +458,18 @@
   margin-top: 100px;
   border-top: 1px solid black;
 }
+
 .sec2 h2 {
   margin-top: 50px;
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .sec2 p {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 21px;
 }
+
 .sec2 span {
   font-weight: 500;
 }
@@ -408,6 +482,7 @@
   flex-wrap: wrap;
   margin-top: 100px;
 }
+
 .achievbox {
   height: 350px;
   width: 300px;
@@ -419,6 +494,7 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+
 .achievimg {
   height: 65%;
   width: 90%;
@@ -426,26 +502,33 @@
   border-radius: 5px;
   box-shadow: 0px 0px 5px;
 }
+
 .achievimg img {
   height: 100%;
   width: 100%;
   object-fit: cover;
 }
+
 .achievbox:nth-child(1) {
   transform: rotate(-3deg);
 }
+
 .achievbox:nth-child(2) {
   transform: rotate(3deg);
 }
+
 .achievbox:nth-child(3) {
   transform: rotate(-3deg);
 }
+
 .achievbox:nth-child(4) {
   transform: rotate(3deg);
 }
+
 .achievbox:nth-child(5) {
   transform: rotate(-3deg);
 }
+
 .achievbox:nth-child(6) {
   transform: rotate(3deg);
 }
