--- a/css_pages/index.css
+++ b/css_pages/index.css
@@ -10,14 +10,15 @@
 .header {
   height: 80px;
   width: 100%;
-  /* border: 1.4px solid black; */
   display: flex;
   align-items: center;
   position: sticky;
   top: 0px;
   z-index: 1000;
-  background-color: white;
-  box-shadow: 0px 0px 3px;
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(10px);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
+  transition: all 0.3s ease;
 }
 
 .tamilletter {
@@ -41,6 +42,23 @@
 .navlist a {
   text-decoration: none;
   color: black;
+  position: relative;
+  transition: all 0.3s ease;
+}
+
+.navlist a::after {
+  content: '';
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  bottom: -5px;
+  left: 0;
+  background-color: blue;
+  transition: width 0.3s ease;
+}
+
+.navlist a:hover::after {
+  width: 100%;
 }
 
 .navlist li {
@@ -130,6 +148,20 @@
 
 .name {
   color: chocolate;
+  display: inline-block;
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateY(15px);
+  animation: revealName 1s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+  animation-delay: 0.3s;
+}
+
+@keyframes revealName {
+  to {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateY(0);
+  }
 }
 
 .herocont p {
@@ -155,16 +187,24 @@
 
 .btns button:hover {
   cursor: pointer;
-  animation: move 1s;
+}
+
+.btns button:active {
+  transform: scale(0.95);
+  box-shadow: 2px 2px chocolate;
 }
 
 @keyframes move {
   0% {
-    transform: translateX(0px);
+    transform: scale(1);
   }
 
-  25% {
-    transform: translateX(10px);
+  50% {
+    transform: scale(1.05);
+  }
+
+  100% {
+    transform: scale(1);
   }
 }
 
@@ -192,10 +232,11 @@
 .skillset {
   height: 250px;
   width: 100%;
-  border: 1px solid black;
+  border-top: 1px solid rgba(0, 0, 0, 0.05);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   margin-top: 10px;
   overflow: hidden;
-  /* Hide the scrollbar */
+  position: relative;
 }
 
 .icon-track {
@@ -246,6 +287,7 @@
 .icon img {
   height: 100%;
   width: 100%;
+  object-fit: contain;
 }
 
 .score {
@@ -280,7 +322,6 @@
 .footer {
   height: 350px;
   width: 100%;
-  border: 1px solid black;
   background-color: rgb(239, 239, 255);
   margin-top: 50px;
 }
@@ -348,6 +389,12 @@
   width: 40px;
   box-shadow: -3px 4px chocolate;
   border-radius: 10px;
+  transition: all 0.3s ease;
+}
+
+.media div:hover {
+  transform: translateY(-5px);
+  box-shadow: -5px 6px chocolate;
 }
 
 .media div:hover {
@@ -388,9 +435,16 @@
   justify-content: center;
   align-items: center;
   justify-content: space-around;
-  border-radius: 5px;
-  box-shadow: 0px 0px 5px;
-  transition: transform 0.3s ease;
+  border-radius: 12px;
+  background-color: white;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.08), 0 10px 25px -5px rgba(0, 0, 0, 0.05);
+  transition: all 0.3s ease;
+}
+
+.cards:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 0 0 1px rgba(59, 130, 246, 0.5), 0 20px 30px -10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
 .cards:nth-child(even) {
@@ -449,91 +503,4 @@
   color: white;
   cursor: pointer;
   transition: 0.5s;
-}
-
-.sec2 {
-  height: 100px;
-  width: 100%;
-  text-align: center;
-  margin-top: 100px;
-  border-top: 1px solid black;
-}
-
-.sec2 h2 {
-  margin-top: 50px;
-  font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.sec2 p {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 21px;
-}
-
-.sec2 span {
-  font-weight: 500;
-}
-
-.achievments {
-  height: 900px;
-  width: 100%;
-  display: flex;
-  gap: 60px;
-  flex-wrap: wrap;
-  margin-top: 100px;
-}
-
-.achievbox {
-  height: 350px;
-  width: 300px;
-  margin-left: 120px;
-  border-radius: 5px;
-  box-shadow: 0px 0px 5px;
-  text-align: center;
-  font-size: 16px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-
-.achievimg {
-  height: 65%;
-  width: 90%;
-  margin: 10px auto;
-  border-radius: 5px;
-  box-shadow: 0px 0px 5px;
-}
-
-.achievimg img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-
-.achievbox:nth-child(1) {
-  transform: rotate(-3deg);
-}
-
-.achievbox:nth-child(2) {
-  transform: rotate(3deg);
-}
-
-.achievbox:nth-child(3) {
-  transform: rotate(-3deg);
-}
-
-.achievbox:nth-child(4) {
-  transform: rotate(3deg);
-}
-
-.achievbox:nth-child(5) {
-  transform: rotate(-3deg);
-}
-
-.achievbox:nth-child(6) {
-  transform: rotate(3deg);
-}
-
-.achievbox:hover {
-  cursor: pointer;
-  transform: scale(1.03);
 }
