--- a/css_pages/about.css
+++ b/css_pages/about.css
@@ -87,6 +87,7 @@ body {
   padding: 100px 8%;
   min-height: 800px;
   margin-top: -100px;
+  margin-top: -120px;
 }
 
 .bio-col {
@@ -293,6 +294,7 @@ body {
   background-color: #fff;
   position: relative;
   overflow: hidden;
+  margin-top: -120px;
 }
 
 .timeline-intro {
