--- a/css_pages/about.css
+++ b/css_pages/about.css
@@ -46,7 +46,7 @@ body {
 .navlist {
   display: flex;
   gap: 30px;
-  margin-left: 72%;
+  margin-left: 80%;
 }
 
 .navlist a {
@@ -93,6 +93,7 @@ body {
 .bio-col {
   flex: 1.2;
   position: relative;
+  margin-top: -90px;
 }
 
 .tag {
@@ -344,28 +345,33 @@ body {
 .m-content {
   display: flex;
   align-items: center;
-  gap: 50px;
   width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
 .m-text {
   flex: 1;
+  width: 50%;
+  padding: 20px 50px;
   text-align: right;
-  padding: 20px;
 }
 
 .m-image {
   flex: 1;
-  border-radius: 20px;
-  overflow: hidden;
-  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.08);
-  transition: transform 0.4s ease;
+  width: 50%;
+  padding: 20px 50px;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .m-image img {
-  width: 100%;
-  height: 350px;
+  width: 350px;
+  height: 200px;
   object-fit: cover;
+  border-radius: 20px;
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.08);
+  transition: transform 0.4s ease;
 }
 
 /* Reversal for Staggering */
@@ -375,6 +381,10 @@ body {
 
 .m-reverse .m-text {
   text-align: left;
+}
+
+.m-reverse .m-image {
+  justify-content: flex-end;
 }
 
 .m-tag {
@@ -435,5 +445,8 @@ body {
 
   .m-image {
     width: 100%;
+    max-width: 350px;
+    height: 200px;
+    margin: 0 auto;
   }
 }
